--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "apexcharts": "^3.43.0",
     "axios": "^1.5.1",
     "blob-stream": "^0.1.3",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-big-calendar": "^1.13.2",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-form-stepper": "^2.0.3",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.25.0",
     "react-scripts": "^5.0.1",
@@ -58,6 +63,7 @@
   },
   "devDependencies": {
     "@types/blob-stream": "^0.1.32",
+    "@types/react-big-calendar": "^1.8.9",
     "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^3.3.3"
   }
